--- a/serviceUsage.html
+++ b/serviceUsage.html
@@ -378,7 +378,7 @@ activedirectory.userSearchFilter: &lt;LDAP userSearchFilter pattern&gt;</pre>
             </tr>
         </table>
 		<h2>
-            <a id="examples" class="anchor" href="#examples" aria-hidden="true">
+            <a id="lookups" class="anchor" href="#lookups" aria-hidden="true">
                 <span aria-hidden="true" class="octicon octicon-link"></span>
             </a>
         </h2>
